# InboxIQ

./: .env.example  README.md  requirements.txt
.github/instructions/: Google_Gmail_api_documentation.instructions.md  MCP Documentation.instructions.md  Problem_statement.instructions.md
backend/: .env  backend_server.py  client.py  client_secret_988480101216-ngp94gefauoo9bf6tvqrea37e93ejsql.apps.googleusercontent.com.json  db_utils.py  email_oauth_routes.py  email_server.py  gmail_token_creator.py  inboxiq.db  mcp-groq-client.py  pyproject.toml  requirements.txt  server.py  test_send_mail.py  token.json  token.pickle  token_yt_yatharth.casual_at_gmail.com.json
backend2/: credentials.json  gmail_token_creator.py  server.py  token.pickle
db/: README.md  __init__.py  database.py  database_helper.py  inboxiq.db  init_db_helper.py  manual_populate_db_helper.py  session_helper.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/components/: Button.tsx  Footer.tsx  Navbar.tsx
frontend/components/onboarding/: CompletionStep.tsx  EmailTagAssignmentStep.tsx  GmailConnectStep.tsx  LlmProviderStep.tsx  TagCreationStep.tsx
frontend/data/: wildcard.json
frontend/pages/: _app.tsx  _document.tsx  home.tsx  index.tsx  login.tsx  onboarding.tsx  settings.tsx  signup.tsx
frontend/pages/api/: tags.ts  user-tags.ts
frontend/pages/api/auth/: gmail-auth-url.ts  gmail-callback.ts  gmail-connection-status.ts  login.ts  register.ts
frontend/styles/: globals.css
frontend/utils/: auth.ts  db.ts  serverConfig.ts
(+13 files in other folders)
