[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "yahrkapa",email = "yahrkapa@iu.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq (>=0.22.0,<0.23.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "mcp-python (>=0.1.4,<0.2.0)",
    "aiohttp (>=3.11.16,<4.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
